added bgimglogic and added bgimage on comp

--- a/public/index.html
+++ b/public/index.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="../src/input.css" />
   </head>
   <body>
-    <div id="root">not rendered</div>
+    <div id="root"></div>
     <script type="module" src="../src/app.js"></script>
   </body>
 </html>
